--- a/src/components/Users/users.css
+++ b/src/components/Users/users.css
@@ -1,3 +1,6 @@
+.users-container {
+  width: 100%;
+}
 .navbar-div {
   display: flex;
   justify-content: space-between;
@@ -6,8 +9,8 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  padding: 0 10px;
   margin-top: 30px;
+  margin: auto;
 }
 .button-container {
   display: flex;
